<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_doc"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_doc" />

    <item
        android:id="@+id/navigation_acc"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_myacc" />

    <!--<item
        android:id="@+id/navigation_hospitals"
        android:icon="@drawable/ic_local_hospital_black_24dp"
        android:title="@string/title_hospital" />



    <item
        android:id="@+id/navigation_stores"
        android:icon="@drawable/ic_local_pharmacy_black_24dp"
        android:title="@string/title_stores" />

    <item
        android:id="@+id/navigation_blood"
        android:icon="@drawable/ic_invert_colors_black_24dp"
        android:title="@string/title_bloodbank" />-->


    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_faq"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/faq" />

</menu>
